force-app/main/default/objects/CP_Note__c/CP_Note__c.object-meta.xml
<CustomObject>
    <label>CP Note</label>
    <nameField>
        <displayFormat>CPNOTE-{00000}</displayFormat>
        <label>CP Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>