force-app/main/default/objects/CP_Note__c/fields/annotationid__c.field-meta.xml
<CustomField>
    <fullName>annotationid__c</fullName>
    <label>annotationid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>