force-app/main/default/objects/CP_Note__c/fields/createdon__c.field-meta.xml
<CustomField>
    <fullName>createdon__c</fullName>
    <label>createdon</label>
    <type>Date</type>
</CustomField>