force-app/main/default/objects/CP_Note__c/fields/External_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Account_ID__c</fullName>
    <label>External Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>