force-app/main/default/objects/CP_Note__c/fields/isdocument__c.field-meta.xml
<CustomField>
    <fullName>isdocument__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isdocument</label>
    <type>Checkbox</type>
</CustomField>