force-app/main/default/objects/CP_Note__c/fields/notetext__c.field-meta.xml
<CustomField>
    <fullName>notetext__c</fullName>
    <label>notetext</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>