force-app/main/default/objects/CP_Note__c/fields/objectid__c.field-meta.xml
<CustomField>
    <fullName>objectid__c</fullName>
    <label>objectid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>