force-app/main/default/objects/CP_Note__c/fields/objecttypecode__c.field-meta.xml
<CustomField>
    <fullName>objecttypecode__c</fullName>
    <label>objecttypecode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>