force-app/main/default/objects/CP_Note__c/fields/ownerid__c.field-meta.xml
<CustomField>
    <fullName>ownerid__c</fullName>
    <label>Externalownerid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>